walkthroughs/howto-k8s-multiple-listeners/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: colors
  labels:
    mesh: colors
    gateway: colors-gw
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: color-headers
  namespace: colors
spec:
  awsName: color-headers.colors.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: color-headers
---
apiVersion: v1
kind: Service
metadata:
  name: color-white
  namespace: colors
spec:
  ports:
    - port: 8080
      name: main
    - port: 8090
      name: misc
  selector:
    app: color
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: white
  namespace: colors
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color
  template:
    metadata:
      labels:
        app: color
    spec:
      containers:
        - name: app
          image: public.ecr.aws/b7m0w2t6/multiportapp:1.2.0
          ports:
            - containerPort: 8080
              name: main
            - containerPort: 8090
              name: misc
---
apiVersion: v1
kind: Service
metadata:
  name: color-headers
  namespace: colors
spec:
  ports:
    - port: 8080
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: colors-gw-1
  namespace: colors
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: colors-gw
---
apiVersion: v1
kind: Service
metadata:
  name: colors-gw-2
  namespace: colors
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8090
  selector:
    app: colors-gw
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colors-gw
  namespace: colors
spec:
  replicas: 1
  selector:
    matchLabels:
      app: colors-gw
  template:
    metadata:
      labels:
        app: colors-gw
    spec:
      containers:
        - name: envoy
          image: 840364872350.dkr.ecr.region-code.amazonaws.com/aws-appmesh-envoy # public envoy image
          ports:
            - containerPort: 8080
              name: main
            - containerPort: 8090
              name: misc
